SOLR-14680: Provide an implementation for the new SolrCluster API (#1730)